--- a/Groepen-war/web/style.css
+++ b/Groepen-war/web/style.css
@@ -18,10 +18,38 @@ body {
     text-align: center;
 }
 
+#centraal{
+    margin-top: 10%;
+}
 
+.buttongrey{
+    background-color: #ddd; 
+    color: #808080;
+}
+
+.buttongreen{
+    background-color: #008000; 
+    color: #808080;
+}
+
+.buttonred{
+    background-color: #780000;
+    color: #808080;
+}
+
+.button {
+    width: 20%;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 5px 5px;
+    cursor: pointer;
+    padding: 8px 15px 8px 15px;
+}
 
 #myInput {
-    background-image: url('/css/searchicon.png'); /* Add a search icon to input */
     background-position: 10px 12px; /* Position the search icon */
     background-repeat: no-repeat; /* Do not repeat the icon image */
     width: 96%; /* Full-width */
@@ -31,26 +59,31 @@ body {
     margin-bottom: 12px; /* Add some space below the input */
 }
 
-#myTable, #myTable2 {
+#myTable, #myTable2, #myTable3 {
     border-collapse: collapse; /* Collapse borders */
     width: 100%; /* Full-width */
     border: 1px solid #ddd; /* Add a grey border */
     font-size: 18px; /* Increase font-size */
 }
 
-#myTable th, #myTable td,#myTable2 th, #myTable2 td  {
+#myTable th, #myTable td,#myTable2 th, #myTable2 td,#myTable3 th, #myTable3 td   {
     text-align: center; /* Left-align text */
     padding: 12px; /* Add padding */
 }
 
-#myTable tr,#myTable2 tr {
+#myTable tr,#myTable2 tr,#myTable3 tr{
     /* Add a bottom border to all table rows */
     border-bottom: 1px solid #ddd; 
 }
 
-#myTable tr.header, #myTable tr:hover  {
+#myTable tr.header, #myTable tr:hover,#myTable3 tr.header, #myTable3 tr:hover   {
     /* Add a grey background color to the table header and on hover */
     background-color: #999999;
-}
+    
+    
+    
+    }
+
+
 
 
